# enterprise-ops-copilot

./: .azdignore  .env.example  README.md  azure.yaml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml
.gitub/workflows/: deploy.yml
_validate/agent-framework-agent-basic-responses/: README.md
data/: generate_data.py  sales.csv
data/policies/: damaged-goods-procedure.md  data-privacy.md  employee-discount.md  price-match.md  returns-policy.md  shipping-policy.md  supplier-escalation.md  warranty-policy.md
demo/: app.py
docs/: challenges-and-solutions.md  cost_analysis.md  project-facts.md  redteam-report.md
docs/adr/: 001-managed-vs-custom-rag.md  002-orchestration-pattern.md  003-memory-strategy.md
evals/: latest_report.json  run_evals.py
evals/datasets/: rag_qa.jsonl  redteam.jsonl  routing.jsonl
mcp_server/: function_app.py  host.json  seed_orders.json  store.py
scripts/: demo_memory.py  setup_memory.py  smoke_docs.py  smoke_phase5.py  test_extraction.py  test_retriever.py
src/agents/: action_agent.py  analytics_agent.py  docs_agent.py  supervisor.py
src/rag/: ingest.py  retriever.py
tests/: test_store.py
