[project]
name = "enterprise-ops-copilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "azure-ai-projects>=2.3.0",        # Foundry SDK — 2.x targets the NEW Foundry API (1.x = classic, incompatible)
  "azure-identity",
  "agent-framework",                  # Microsoft Agent Framework (verify current package name on PyPI)
  "azure-ai-agentserver-responses",   # hosted-agent Responses protocol server library
  "azure-search-documents>=11.5",
  "openai>=1.50",
  "azure-monitor-opentelemetry",
  "azure-ai-evaluation",
  "python-dotenv",
  "pandas",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "streamlit"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
ignore = ["BLE001", "ASYNC230"]

[tool.ruff.lint.per-file-ignores]
# exec() is the deliberately sandboxed pandas tool - see ADR 002 / redteam report
"src/agents/analytics_agent.py" = ["S102"]
# scripts must load .env and set sys.path before importing project modules
"scripts/*" = ["E402"]
"evals/*" = ["E402"]
